# sassyconsultingllc-cloudflare

./: .env  .env.example  .gitignore  README.md  WEBSITE-UPDATE-PLAN.md  package-lock.json  package.json  wrangler.jsonc  wrangler.toml  wrangler.toml.bak
.claude/: settings.local.json
_DELETE_/: WEBSITE-UPDATE-PLAN.md
contact-form-handler/: Cargo.toml  README.md
contact-form-handler/src/: email.rs  errors.rs  lib.rs  models.rs  validator.rs
db/: nda-schema.sql
docs/plans/: 2026-02-27-aboutme-page-design.md
functions/: browser.js
migrations/: 0001_init.sql  0002_licenses.sql  0003_missing_tables.sql  0004_rename_payment_columns.sql  0005_add_revoked_column.sql
public/: WEBSITE-UPDATES.md  aboutme.html  app-testers.html  app.js  browser-info.html  browser-pre-seo.html  browser-v1-backup.html  browser-v2.html  browser.html  checkout.js  coming-soon.html  contact-success.html  contact.html  design-system.css  eula.html  glossary.js  index.html  my-best-sites.html  nda.html  pricing.html  privacy-policy.html  privacy.html  refund-policy.html  robots.txt  sassy-talk.html  sitemap.xml  store.html  styles.css  success.html  terms.html  website-creator.html  winforensics.html
public/checkout/: forensics.html  pro.html  team.html
public/guides/: protonvpn.html  warp.html
public/privacy/cfadmin/: eula.html  index.html  terms.html
scripts/: audit-links.mjs  build-sitemap.mjs  finish-lemonsqueezy.ps1  sitemap.extras.json
scripts/audits/: mercury_audit.py  mercury_revamp.py
scripts/test/: scrub-pdf.test.mjs
src/: worker.js
(+3 files in other folders)
