[package]
name = "contact_form_handler"
version = "0.1.0"
edition = "2024"
description = "A modular contact form handler with validation and email sending"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
lettre = { version = "0.11", features = ["smtp-transport", "tokio1-native-tls", "builder"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
